[package]
name = "utrp"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_chacha = "0.3.1"
statrs = "0.16.0"
log = "0.4.0"
env_logger = "0.9.0"
colored = "2.0.0"
midir = "0.8.0"
crossterm = "0.25"
anyhow = "1.0"
